--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "description": "Complete Node.js Guide",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "connect-mongodb-session": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.12.1",
     "mysql2": "^3.12.0",
