--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.12.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
